[package]
name = "craft"
version = "0.1.0"
authors = ["Angus Holder <aholder97@gmail.com>"]

[dependencies]
cgmath = "*"
env_logger = { version = "0.4", default-features = false }
fnv = "*"
image = { version = "*", default-features = false, features = [ "png" ] }
imgui = "*"
imgui-glium-renderer = "*"
glium = "*"
lazy_static = "*"
log = "0.3"
#luajit-sys = "*"
#noise = "*"
rusqlite = { version = "*", features = ["bundled"] }

serde_derive = "1.0"
serde = "1.0"
toml = "*"

deflate = "*"
inflate = "*"
